Made code changes