@@ -1,97 +1,101 @@
 package com.bankapp.accountsmicro.service;
 
 import com.bankapp.accountsmicro.entity.Account;
-import com.bankapp.accountsmicro.model.AccountResponse;
-import com.bankapp.accountsmicro.model.Transaction;
+import com.bankapp.accountsmicro.exceptions.InvalidAccountException;
+import com.bankapp.accountsmicro.exceptions.InvalidTransactionException;
+import com.bankapp.accountsmicro.model.*;
 import com.bankapp.accountsmicro.repo.AccountRepo;
-import lombok.AllArgsConstructor;
+import lombok.*;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.Objects;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
 @Slf4j
+@AllArgsConstructor
 public class AccountService {
 
     @Autowired
     private AccountRepo accountRepo;
+    private static final String CHECKING ="Checking";
+    private static final String SAVINGS ="Savings";
+    private static final Random rand = new Random();
 
-    public AccountResponse recordAccountInDB(Account account){
-        int accNum = new Random().nextInt(999999999) + 1234567890;
+    public AccountResponse saveBankAccountInDB(AccountDTO accountDTO){
+        log.info("Opening bank account for user id " + accountDTO.userId() + "....");
+        if(accountDTO.balance() <= 0 )
+            throw new InvalidAccountException("Cannot open bank account with zero or negative balance....");
+        Account account = Account.builder()
+                .userId(accountDTO.userId())
+                .accountNumber(accountDTO.accountNumber())
+                .routingNumber(accountDTO.routingNumber())
+                .accountType(accountDTO.accountType())
+                .balance(accountDTO.balance())
+                .build();
+        int accNum = rand.nextInt(999999999) + 1234567890;
         account.setAccountNumber(accNum < 0 ? -(accNum) : accNum);
         account.setRoutingNumber(9876543210L);
-        String accountType = account.getAccountType() == 'C' ? "Checking" : "Savings";
-        log.info("Attempting to open " + accountType + " account...");
-        int count = (int) accountRepo.findAll().stream()
-                .filter(accountInDB -> accountInDB.getAccountType() == account.getAccountType()
-                        & accountInDB.getUserId().equals(account.getUserId()))
-                .count();
-        String message;
-        if(count == 0){
-            accountRepo.save(account);
-            message = accountType + " account opened!";
-        } else {
-            message = accountType + " account already exists.";
-        }
+        Account accountDB = accountRepo.save(account);
         return AccountResponse.builder()
-                .accountNumber(account.getAccountNumber())
-                .userId(account.getUserId())
-                .routingNumber(account.getRoutingNumber())
-                .balance(account.getBalance())
-                .accountType(accountType)
-                .message(message)
+                .userId(accountDB.getUserId())
+                .accountNumber(accountDB.getAccountNumber())
+                .routingNumber(accountDB.getRoutingNumber())
+                .accountType(accountDB.getAccountType() == 'C' ? CHECKING : SAVINGS)
+                .balance(accountDB.getBalance())
+                .message("Bank account opened!")
                 .build();
     }
 
-    public List<AccountResponse> findAccountsByUserIdInDB(Integer userId){
-        log.info("Searching for bank accounts for user by ID " + userId + "....");
-        return accountRepo.findAll().stream()
-                .filter(account -> Objects.equals(account.getUserId(), userId))
-                .map(account ->
-                        AccountResponse.builder()
-                                .accountNumber(account.getAccountNumber())
-                                .userId(userId)
-                                .routingNumber(account.getRoutingNumber())
-                                .balance(account.getBalance())
-                                .accountType(account.getAccountType() == 'C' ? "Checking" : "Savings")
-                                .message("Users bank accounts retrieved.")
-                                .build())
-                .collect(Collectors.toList());
+    public List<AccountResponse> fetchBankAccountsByUserIdInDB(Integer userId){
+        log.info("Fetching bank accounts for user id " + userId + "....");
+        return accountRepo.findAllByUserId(userId).orElseThrow()
+                .stream()
+                .map(account -> AccountResponse.builder()
+                        .userId(userId)
+                        .accountNumber(account.getAccountNumber())
+                        .routingNumber(account.getRoutingNumber())
+                        .accountType(account.getAccountType() == 'C' ? CHECKING : SAVINGS)
+                        .balance(account.getBalance())
+                        .message("Fetched bank account number " + account.getAccountNumber())
+                        .build())
+                .toList();
     }
 
-    public List<AccountResponse> findAllAccountsInDB(){
-        log.info("Fetching all bank accounts in system....");
-        return accountRepo.findAll().stream()
-                .map(account ->
-                        AccountResponse.builder()
-                                .accountNumber(account.getAccountNumber())
-                                .userId(account.getUserId())
-                                .routingNumber(account.getRoutingNumber())
-                                .balance(account.getBalance())
-                                .accountType(account.getAccountType() == 'C' ? "Checking" : "Savings")
-                                .message("All bank accounts retrieved.")
-                                .build())
-                .collect(Collectors.toList());
+    public List<AccountResponse> fetchAllBankAccountsInDB(){
+        log.info("Fetching all bank accounts....");
+        return accountRepo.findAll()
+                .stream()
+                .map(account -> AccountResponse.builder()
+                        .userId(account.getUserId())
+                        .accountNumber(account.getAccountNumber())
+                        .routingNumber(account.getRoutingNumber())
+                        .accountType(account.getAccountType() == 'C' ? CHECKING : SAVINGS)
+                        .balance(account.getBalance())
+                        .message("Fetched bank account number " + account.getAccountNumber())
+                        .build())
+                .toList();
     }
 
-    public AccountResponse updateAccountInDB(Transaction transaction){
-        log.info(transaction.toString());
-        Account account = accountRepo.findByAccountNumber(Integer.parseInt(transaction.getAccount())).get();
-        account.setBalance(transaction.getTransactionType().equals(String.valueOf('W'))
-                ? account.getBalance() - transaction.getAmount()
-                : account.getBalance() + transaction.getAmount());
-        Account accountDB = accountRepo.save(account);
+    public AccountResponse updateBankAccountInDB(Transaction transaction){
+        log.info("Making transaction on bank account for $" + transaction.amount() + "....");
+        Account accountDB = accountRepo.findByAccountNumber(transaction.accountNumber()).orElseThrow();
+        if (transaction.amount() <= 0)
+            throw new InvalidTransactionException("Cannot make transaction of zero or negative amount....");
+        else if (transaction.transactionType() == 'W'
+                && transaction.amount() > accountDB.getBalance())
+            throw new InvalidTransactionException("Cannot withdraw more than current balance....");
+        accountDB.setBalance(transaction.transactionType() == 'W'
+                ? accountDB.getBalance() - transaction.amount()
+                : accountDB.getBalance() + transaction.amount());
+        Account accountUpdated = accountRepo.save(accountDB);
         return AccountResponse.builder()
-                .userId(accountDB.getAccountId())
-                .accountType(accountDB.getAccountType() == 'C' ? "Checking" : "Savings")
-                .accountNumber(accountDB.getAccountNumber())
-                .routingNumber(accountDB.getRoutingNumber())
-                .balance(accountDB.getBalance())
+                .userId(accountUpdated.getUserId())
+                .accountNumber(accountUpdated.getAccountNumber())
+                .routingNumber(accountUpdated.getRoutingNumber())
+                .accountType(accountUpdated.getAccountType() == 'C' ? CHECKING : SAVINGS)
+                .balance(accountUpdated.getBalance())
                 .message("Transaction complete!")
                 .build();
     }
